# glimmer

./: .gitignore  .version.toml  README.md  default_config.ini  main.py  pyproject.toml  requirements.txt  result.txt
__pypackages__/3.9/lib/: easy-install.pth  glimmer.egg-link
__pypackages__/3.9/lib/Pygments-2.8.1.dist-info/: RECORD
__pypackages__/3.9/lib/XlsxWriter-1.3.9.dist-info/: METADATA  RECORD
__pypackages__/3.9/lib/certifi-2020.12.5.dist-info/: RECORD
__pypackages__/3.9/lib/chardet-4.0.0.dist-info/: RECORD
__pypackages__/3.9/lib/click-7.1.2.dist-info/: RECORD
glimmer/: main.py
glimmer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
glimmer/api/: __init__.py
glimmer/data/: default_config.ini
glimmer/libs/: __init__.py  controller.py  logger.py
glimmer/libs/controller/: controller.py
glimmer/libs/core/: config.py  enums.py  exceptions.py  loader.py  parser.py  plugin.py  poc.py
glimmer/libs/request/: __init__.py  patch.py
glimmer/plugins/output/: console.py  pure_text.py  table.py  text.py
glimmer/plugins/parser/: file.py  fofa.py  python.py  repo.py  shodan.py  url.py  zoomeye.py
glimmer/pocs/_demo/: demo.py  demo2.py
glimmer/pocs/code_leak/: bak.py  bzr.py  cvs.py  ds_store.py  git.py  hg.py  svn.py  web_inf.py
glimmer/pocs/demo/: demo.py  demo2.py
glimmer/pocs/info_leak/: crossdomain.py  frontpage.py  phpinfo.py  phpmyadmin.py  robots.py
glimmer/pocs/unauth_access/: jenkins.py  redis.py
glimmer/utils/: __init__.py  printer.py  utils.py
glimmer/utils/cyberspace/: __init__.py  fofa.py  shodan.py  utils.py  zoomeye.py
(+18 files in other folders)
