[project]
name = "python-glimmer"
version = "1.3.0"
description = ""
authors = [
    {name = "WAY29", email = "1162410187@qq.com"},
]
dependencies = [
    "requests~=2.25",
    "rich~=10.0",
    "click~=7.1",
    "zoomeye~=2.0",
    "shodan~=1.25",
    "func-timeout~=4.3",
]
dev-dependencies = []
requires-python = ">=3.6"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.scripts]
glimmer = "glimmer.main:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
publish = {shell = "pdm build && twine upload dist/*"}
tree = {shell = "pdm list --graph"}