[project]
name = "python-glimmer"
version = "1.4.1"
description = ""
authors = [
    {name = "WAY29", email = "1162410187@qq.com"},
]
readme = "README.md"
dependencies = [
    "requests~=2.25",
    "rich~=10.0",
    "click~=7.1",
    "zoomeye~=2.0",
    "shodan~=1.25",
    "func-timeout~=4.3",
]
dev-dependencies = []
requires-python = ">=3.6"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/WAY29/glimmer"

[project.scripts]
glimmer = "glimmer.main:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
publish = {shell = "pdm build && twine upload dist/*"}
tree = {shell = "pdm list --graph"}